# diesel-example

./: Cargo.toml  README.md  test.db
migrations/2020-09-04-052416_my_table/: down.sql  up.sql
src/: main.rs  schema.rs
