[package]
name = "better_d"
version = "0.1.0"
authors = ["0rphon <59403052+0rphon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }